IT passing